--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
 /* CSS Adaptado para la resolución 1280px */
 
 /* Gama de colores */
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-    background-color: rgb(209, 249, 237);
+    background-image: url(../img/background2.jpeg);
     font-family: Poppins; 
     font-weight: 400;
     font-size: 1.0rem;
@@ -31,41 +31,53 @@ body {
 
 h1 {
     margin: 3vh;
-    font-family: bebas neue;
+    font-family: Mukta;
     font-size: xx-large;
-    color: #10afa0;
+    font-weight: 800;
+    color: #183f89;
+}
+
+h2 {
+    margin: 3vh;
+    font-family: Mukta;
+    font-size: x-large;
+    font-weight: 800;
+    color: #2681ba;
 }
 
 /* Barra de Navegación */
 
 nav {
-    margin: 2vh;
     padding: 2.5vh;
-    background-color: #0ec5b3;
-    border: 3px solid #009f8e;
+    margin-bottom: 2%;
+    background: rgb(2,0,36);
+    background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(9,9,121,0.5478524173341212) 35%, rgba(0,212,255,0.752334210051208) 100%);
 }
 
-nav ul li details {
-    display: inline-block;
+nav ul li a img {
+    vertical-align: middle;
+    text-align: center;
 }
 
 nav ul li a{
-    font-family: Bebas Neue;
-    font-size: 1.2rem;
+    font-family: bebas neue;
+    font-weight: 500;
+    font-size: 1.3rem;
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 1vh;
     border-radius: 4px;
 }
 
 nav ul li a:hover {
-    background-color: #15d8c5;
-    box-shadow: 0px 0px 10px #10afa0;
-    transition: 0.5s;
+    background-color: #2681ba;
+    box-shadow: 0px 0px 10px #183f89;
+    transition: 1.0s;
 }
 
 nav ul a img {
     vertical-align: middle;
+    padding: 1vh;
 }
 
 nav ul li {
@@ -73,250 +85,258 @@ nav ul li {
     display: inline;
 }
 
-.separador {
-    display: inline-block;
-    width: 54vw;
-}
+.derecha {
+    padding: 1.5vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
+    float:right;
+} 
 
 /* Fin Barra de Navegación */
 
-#contenedorPrincipal {
-    background-color: rgba(0, 0, 0, 0.449);
-    background-image: url(../img/background1.png);
+#contenedorInicial {
+    background-color: rgba(240, 248, 255, 0.9);
+    border: 2px solid #2681ba;
+    box-shadow: 0px 0px 15px #2681ba;
 }
 
-#contenedorPrincipal figure img {
-    width: 35vw;
-    margin: 3vh;
-    margin-left: 4vh;
-    border-radius: 10px;
-    border: 3px solid #009f8e;
+#contenedorInicial table {
+    margin: 1%;
+}
+
+#contenedorInicial table tr td img {
+    width: 90%;
+    margin: 5%;
+    border-radius: 5px;
+    border: 3px solid #2681ba;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.43);
 }
 
-#contenedorPrincipal figure img:hover {
+#contenedorInicial table tr td img:hover {
     transform: scale(1.05);
     transition: 0.5s;
 }
 
-#contenedorPrincipal figure figcaption {
-    background-color: #07b2a0;
-    box-shadow: 0px 0px 10px #00000098;
-    color: black;
-    border-radius: 10px;
-    padding: 3vh;
-    width: 45vw;
-    margin-top: 5%;
-    margin-right: 7%;
-    float: right;
+#contenedorInicial table tr td {
+    vertical-align: middle;
+    padding: 1%;
 }
 
-#imgFondoPrincipal {
-    width: 100vw;
-    height: 60vh;
-    padding: 10vh;
+/* Span a destacar */
+
+.destacable {
+    color:#4cbeea;
+    font-weight: bold;
+}
+
+/* Tabla Contenido */ 
+
+#tablaContenido {
+    width: 30%;
+    border-radius: 15px;
+    margin: 5vh;
+    padding: 1vh;   
+}
+
+#tablaContenido > div {
+    text-align: center;
+    margin: 0;
+    padding: 2vh;
+    border-radius: 15px;
+    background-color: rgb(130, 187, 231);
+    max-width:29vw;
+    font-family: Mukta;
+    font-weight: 800;
+    font-size: x-large;
+}
+
+#tablaContenido details {
+    margin: 1%;
+    padding: 2%;
+    background-color: #2681ba;
+    border-radius: 5px;
+}
+
+#tablaContenido details:hover {
+    background-color: rgb(130, 187, 231);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+#tablaContenido > details > div > p {
+    padding: 3%;
+    color: rgb(244, 244, 244);
+    font-size: 1.0rem;
+    word-spacing: 1px;
+}
+
+#tablaContenido ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+#tablaContenido ul li a:hover{
+    text-decoration: underline;
+    transition: 0.5s;
+}
+
+/* Ranking tabla desastres */
+
+#contenedorDesastres {
+    background-color: #2681bad2;
+    border: 2px solid aliceblue;
+    box-shadow: 0px 0px 15px #2681ba;
+    margin-top: 2%;
+    padding: 2%;
+    border-radius: 4px;
+    font-family: Mukta;
+    font-weight: 600;
+    font-size: 1.1rem;
 }
 
 #tablaDesastres {
-    box-shadow: 0px 0px 10px #009f8e;
+    float: left;
+    margin: 2% 10% 2% 5%;
 }
+
+#tablaDesastres > table > caption {
+    font-size: 1.5rem;
+    font-weight: 800;
+    font-family: Mukta;
+}
+
+#tablaDesastres > table {
+    background-color: aliceblue;
+    box-shadow: 0px 0px 10px #183f89;   
+}
+
+#tablaDesastres > table, #tablaDesastres > table td {
+    border: 2px solid #183f89;
+}
+
+#tablaDesastres > table td {
+    padding: 10px;
+}
+
+#listaDesastres {
+    padding-top: 2%;
+    float: right;
+}
+
+#listaDesastres > ul > li {
+    padding: 5%;
+}
+
+#listaDesastres > ul > li > a {
+    color: white;
+    text-decoration: none;
+}
+
+#listaDesastres > ul > li > a:hover {
+    text-decoration: underline;
+    transition: 0.5s;
+}
+
+.limpiarfloat {
+    clear: both;
+}
+
+/* Hover tablas */
 
 #tablaDesastres:hover, #tablaContenido:hover, #contenedorPrincipal figure figcaption:hover {
     transform: scale(1.02);
     transition: 0.2s;
 }
 
-.destacable {
-    color:#ffffff;
-    font-weight: bold;
-}
-
-#tablaDesastres {
-    display: inline-block;
-    margin: 10vh 10vh 10vh 7vh;
-    border: 2px solid #009f8e;
-    width: 45vw;
-    height: max-content;
-    border-radius: 10px;    
-}
-
-#tablaContenido {
-    width: 22vw;
-    border-radius: 15px;
-}
-
-section article:nth-of-type(2) table {
-    width: 37vw;
-}
-
-section article:nth-of-type(2) table,tr,td {
-    background-color: #15d8c5;
-    border: 2px solid #009f8e;
-    margin: 5vh;
-    padding: 1vh;
-}
-
-section article:nth-of-type(2) div caption {
-    margin-bottom: 4vh;
-    font-family: bebas neue;
-    font-size: xx-large;
-}
-
-section article:nth-of-type(2) aside {
-    margin: 10vh;
-    width: 30vw;
-    background-color: #15d8c5;
-    float: right;
-    border-radius: 10px;
-    max-height: min-content;
-    box-shadow: 0px 0px 10px #009f8e;
-}
-
-#tablaContenido div:nth-of-type(1) {
-    text-align: center;
-    margin: 0;
-    padding: 2vh;
-    border-radius: 15px;
-    background-color: rgb(209, 249, 237);
-    max-width:29vw;
-    font-family: bebas neue;
-    font-size: x-large;
-}
-
-section article:nth-of-type(2) aside div:nth-of-type(2) {
-    margin: 1vh 4vh 15vh 5vh;
-    max-width:23.9vw;
-    border: none;
-}
-
-section article:nth-of-type(2) ul li {
-    padding: 2vh;
-}
-
-section article:nth-of-type(2) ul li a {
-    text-decoration: underline;
-    color: black;
-}
-
-section article:nth-of-type(2) ul li a:hover {
-    text-decoration: none;
-    color: white;
-    transition: 0.2s;
-}
-
-/* Plantilla de Noticia 1 */
+/* Plantilla Noticias */
 
 .noticia {
-    margin-left: 1%;
+    margin-top: 2%;
+    width: 100vw;
+    max-height: max-content;
+    background-color: rgba(240, 248, 255, 0.9);
+    padding: 2rem;
+    box-sizing: border-box;
+}
+
+.noticia table {
+    background-color: #2681ba;
+}
+
+.noticia table tr td {
+    border: 2px solid white;
+    vertical-align: middle;
+}
+
+.noticia table tr td:nth-of-type(1) {
+    width: 20%;
+}   
+
+.noticia table tr td:nth-of-type(2) {
+    width: 59%;
+    padding: 1%;
+}
+
+.noticia h1 {
+    color: #183f89;
+    font-family: Mukta;
+    font-weight: 800;
 }
 
 .noticia img {
-    margin-left: 2vh;
-    border: 2px solid #0d7469;
-    box-shadow: 0px 0px 10px #065a52;
-    border-radius: 15px;
-}
-
-.noticia figure {
-    margin-left: 2vh;
-    background-color: #10afa0;
-    box-shadow: 0px 0px 10px #009f8e;
-    border-radius: 15px;
-    width: fit-content;
-    padding: 2vh;
-}
-
-.noticia:hover {
-    transform: scale(1.01);
-    transition: 0.5s;
-}
-
-.noticia figure figcaption {
-    width: 25vw;
-    padding-left: 3vh;
-    float: right;
-}
-
-/* Plantilla de Noticia 2 */
-
-.noticia2 {
-    text-align: right;
-    margin-left: 33%;
-}
-
-.noticia2 h1 {
-    margin-right: 5vh;
-}
-
-.noticia2 img {
-    width: 30vw;
-    margin-left: 2vh;
-    border: 2px solid #0d7469;
-    box-shadow: 0px 0px 10px #065a52;
-    border-radius: 15px;
-}
-
-.noticia2 figure {
-    margin-left: 2vh;
-    background-color: #10afa0;
-    box-shadow: 0px 0px 10px #009f8e;
-    border-radius: 15px;
-    width: fit-content;
-    padding: 2vh;
-}
-
-.noticia2:hover {
-    transform: scale(1.01);
-    transition: 0.5s;
-}
-
-.noticia2 figure figcaption {
-    width: 25vw;
-    padding-left: 3vh;
-    float: right;
+    width: 100%;
 }
 
 /* Noticia 1 */
 
-#haiti img {
-    width: 29vw;
-    margin-top: 5vh;
+.noticia1 {
+    margin-top: 2%;
+    width: 100vw;
+    max-height: max-content;
+    background-color: rgba(240, 248, 255, 0.9);
+    padding: 2rem;
+    box-sizing: border-box;
 }
 
-#haiti figure {
-    height: 45vh;
+.noticia1 table {
+    background-color: #2681ba;
 }
 
-/* Noticia 2 */ 
-
-#katrina img {
-    width: 29vw;
-    margin-top: 4vh;
+.noticia1 table tr td {
+    border: 2px solid white;
+    vertical-align: middle;
 }
 
-#katrina figure {
-    height: 52vh;
+.noticia1 table tr td:nth-of-type(1) {
+    width: 59%;
+    padding: 1%;
+}   
+
+.noticia1 table tr td:nth-of-type(2) {
+    width: 20%;
 }
 
-/* Noticia 3 */
-
-#tsunami1 img {
-    width: 18vw;
-    margin-top: 2vh;
+.noticia1 h1 {
+    color: #183f89;
+    font-family: Mukta;
+    font-weight: 800;
+    text-align: right;
 }
 
-#tsunami1 figure {
-    height: 33vh;
+.noticia1 img {
+    width: 100%;
 }
 
-#tsunami1 figure figcaption {
-    margin-top: 5vh;
+.noticia table:hover, .noticia1 table:hover {
+    background-color: #2b94d4;
+    transform: scale(1.02);
+    transition: 0.5s;
 }
 
 /* Footer */
 
 footer {
-    background-color: #009f8e;
+    background-color: #183f89;
     width: auto;
     margin-top: 2%;
     padding: 2%;
@@ -334,7 +354,7 @@ footer ul li:nth-of-type(2) {
     margin-left: 62%;
     font-family: Bebas Neue;
     font-size: x-large;
-    color: rgb(26, 26, 26);
+    color: rgb(238, 238, 238);
 }
 
 footer ul li img {
